--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+	<!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 	<div class="container-fluid">
@@ -15,10 +16,10 @@
 					<br>
 					<br>
 					<h1 class="mb-2">
-						This is the title 
+						Pergerakan IDR terhadap Dollar USD 
 					</h1>
 					<h3>
-						Reported Period: insert the data period here
+						Reported Period: 31/5/2020 to 19/11/2020
 					</h3>
 					<br>
 				</div>
@@ -55,7 +56,7 @@
 				<!-- Tab content -->
 				<div id="profile" class="tabcontent">
 					<br>
-					<h3 style="color: #333333;text-align:center">plot title here</h3>
+					<h3 style="color: #333333;text-align:center">Harga Harian IDR terhadap USD</h3>
 					<div class="img-container"">
 						{% if funded_plot != None %}
 					  <img src="data:image/png;base64,{{ plot_result }}" >
@@ -64,6 +65,8 @@
 				</div>
 				<div id="Own" class="tabcontent">
 				  <!-- Define your own analysis for extra challange -->
+				  <h3 style="color: #333333;text-align:center">Harga Harian IDR terhadap USD</h3>
+
 
 				</div>
 			</div>
